# rds_iamauth_proxy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  run_docker.sh  sample.config.json  ssh-tunnel.config.json
src/: backend_config.rs  main.rs
