[package]
name = "rds_proxy"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Connect existing Postgres tools to an RDS instance using IAM Authentication"
repository = "https://github.com/goldfiglabs/rds_iamauth_proxy"

[dependencies]
aws-config = "1.0.3"
aws-credential-types = "1.0.3"
aws-sigv4 = "1.0.3"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = "4.4.11"
color-eyre = "0.6.2"
config = "0.13.4"
eyre = "0.6.9"
futures = "0.3.29"
memchr = "2.6.4"
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
postgres-protocol = "0.6.6"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = { version = "1.34.0", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
